--- a/computing.htm
+++ b/computing.htm
@@ -252,8 +252,8 @@ border: none;
 
 <p>•FisherMP：对ChIP-Seq结合峰数据进行模体发现的高效并行算法工具。</p>
 
-<p>FisherMP: a motif finding program with openMP parallel design for ChIP-Seq binding peaks </p>
-<p>Source code: https://github.com/shaoqiangzhang/fishermp </p>
+<p>FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/30957858">PMID:30957858</a>)</p>
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/fishermp"> https://github.com/shaoqiangzhang/fishermp </a></p>
 
 <hr />
 
@@ -271,7 +271,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Aug 30,2018</p>
+			<p>Updated by Nov 30,2019</p>
 		</div>
 
 </div>
