--- a/grad.htm
+++ b/grad.htm
@@ -192,7 +192,7 @@ border: none;
 				<div class="box" style="width: 144px; height: 500px">
 					<p>
 					
-					<font size="2">•	2018级拟招收研究生2名（计算机科学学硕1名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, 英语四级以上，研究生初试成绩300分以上。 </font>
+					<font size="2">•	2020级拟招收研究生2名（计算机科学学硕1名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, 英语四级以上，研究生初试成绩300分以上。 </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
@@ -207,19 +207,20 @@ border: none;
 
 
 
-<p>•	现指导研究生5名：
-<p>&nbsp;	武思文，冯艳霞，李艳慧（2016级）
-<p>&nbsp;	邵帅，薛利祥（2017级）
+<p>•	现指导研究生3名：
+<p>&nbsp;	刘玥晗，时仲祎（2018级）
+<p>&nbsp;	崔雅轩（2019级）
 <hr />
-<p>•	已毕业研究生（19名）：</p>
+<p>•	已毕业研究生（24名）：</p>
 <p>&nbsp;	2007：丁春勇(天津师范大学)；侯刚(中国人民银行天津支行)</p>
 <p>&nbsp;	2012：车振凯(天津音乐学院)；陈超(VOLVO)；柴秀琴(天津工业大学)</p>
 <p>&nbsp;	2013：连高欣(天津气象局)；陈龙鑫(福州大学)</p>
 <p>&nbsp;	2014：耿丹丹(北京 BioMarker Tech.)；汪珩(天津高新区)；韩旭(长春教委)</p>
-<p>&nbsp;	2015：张蕊(天津市第一中级人民法院)；张甜(天津师范大学滨海附属小学)；宁静雁(大同大学)；王芳(江苏淮安市清浦开明中学)</p>
+<p>&nbsp;	2015：张蕊 (天津市第一中级人民法院)；张甜 (天津师范大学滨海附属小学)；宁静雁 (大同大学)；王芳(江苏淮安市清浦开明中学)</p>
 <p>&nbsp;	2016：张莹（国家电网新疆电力公司)</p>
 <p>&nbsp;	2017：李静（天津南开国税局）；张志红</p>
 <p>&nbsp;	2018：李婷，陈艳楠</p>
+<p>&nbsp;	2019：武思文，冯艳霞，李艳慧，邵帅，薛利祥</p>
 <hr />
 <p></p>
 
@@ -234,7 +235,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Aug 30,2018</p>
+			<p>Updated by Nov 30,2019</p>
 		</div>
 
 </div>
