--- a/index.html
+++ b/index.html
@@ -215,15 +215,15 @@ border: none;
             <div class="right_side" style="width: 500px; height: 560px">
 				<div class="article">
 					<h3>&nbsp;</h3>
-					<h3><font size="3">**** </font></h3>
+					<h3><font size="3"> </font></h3>
 					
-					<p><font size="3">本学期开设课程（2019年春季）</font></p>
-					<p><font size="2">1. 2018级计算机科学与技术专业基础课《高等数学2-2》。</p> <i><a target="_blank" href="https://pan.baidu.com/share/init?surl=-fJQZaobnCKb6hqEWkpuzw">
-					<span style="TEXT-DECORATION: none">百度网盘课件下载。（提取码kc3w）</span></a></i>
+					<p><font size="3">*****本学期开设课程（2019年秋季）*****</font></p>
+					<p><font size="2">1. 2019级计算机科学与技术专业基础课《高等数学2-1》。</p> <i><a target="_blank" href="https://pan.baidu.com/s/1jvzMLdSwIF_HSVfK2jEISg">
+					<span style="TEXT-DECORATION: none">百度网盘课件下载链接</span></a></i>
 
 					<h3>&nbsp;</h3>
-										<p><font size="2">2. 研究生课程《高等工程数学》。<i><a target="_blank" href="https://pan.baidu.com/share/init?surl=kfifXLomWA5WhYBF96eO3A">
-					<span style="TEXT-DECORATION: none">百度网盘课件下载。（提取码9zrh）</span></a></i>
+										<p><font size="2">2. 研究生课程《高等工程数学》。<i><a target="_blank" href=" ">
+					<span style="TEXT-DECORATION: none">百度网盘课件下载 </span></a></i>
 					<h3>&nbsp;</h3>
 
 					</font></p>
@@ -245,7 +245,7 @@ Recent work mainly includes motif finding, sequence assembly, and functional pre
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Aug 30,2018</p>
+			<p>Updated by Nov 30,2019</p>
 		</div>
 
 </div>
