--- a/pub.htm
+++ b/pub.htm
@@ -211,90 +211,18 @@ border: none;
 <div class="header_top"></div>
 <div class="STYLE8" style="width: inherit; height: auto">
   <div class="article">
-    <h2 align="center" class="STYLE7">Selected publications</h2>
+    <h2 align="center" class="STYLE7"><p>   Please visit ORCID for my recent publications </p>
+<p>     <a target="_blank" href="http://orcid.org/0000-0002-4127-0539"> http://orcid.org/0000-0002-4127-0539 </a> </p></h2>
     <div class="page">
-      <div class="right-column">
-        <ul class="STYLE11">
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i>Integrated transcriptomic analysis of Trichosporon Asahii uncovers the core genes and pathways of fluconazole resistance</i><br />
-
-Li Haitao, Wang Congmin, Chen Yong, Zhang Shaoqiang,Yang Rongya. Scientific Reports: 2017 ,7 ,17847</li>
-
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i>CLIMP: Clustering Motifs via Maximal Cliques with Parallel Computing Design</i><br />
-
-Zhang, Shaoqiang and Chen, Yong. PLOS ONE: 2016 ,11 ,1-17</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i>Investigating Evolutionary Dynamics of RHA1 Operons</i><br />
-
-Yong Chen, Dandan Geng, Kristina Ehrhardt, Shaoqiang Zhang. Evolutionary Bioinformatics: 2016 ,12,157--163</li>
-
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i>SPIC: A novel similarity metric for comparing transcription factor binding site motifs based on information contents</i><br />
-
-Zhang, Shaoqiang and Zhou, Xiguo and Du, Chuanbin and Su, Zhengchang. BMC Systems Biology: 2013,7(2) ,S14</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"> <i>Evolution and Function of Prokaryotic Dynamin-Like Proteins</i><br />
-
-耿丹丹 ， Simon Cichello ， 张少强 ， 陈勇. Aata Biophysica Sinica (生物物理学报): 2013 ,29(9) ,646-657</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"> MotifClick: prediction of cis-regulatory binding sites via merging cliques</i><br />
-
-Zhang, Shaoqiang and Li, Shan and Niu, Meng and Pham, Phuc T. and Su, Zhengchang. BMC Bioinformatics: 2011 ,12(1) ,238</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i> Simultaneous prediction of transcription factor binding sites in a group of prokaryotic genomes</i><br />
-
-Zhang, Shaoqiang and Li, Shan and Pham, Phuc T. and Su, Zhengchang. BMC Bioinformatics: 2010 ,11(1),397</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i> Genome-wide de novo prediction of cis-regulatory binding sites in prokaryotes</i><br />
-
-Zhang, Shaoqiang and Xu, Minli and Li, Shan and Su, Zhengchang. Nucleic Acids Research: 2009 ,37(10),e72</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i>  A novel information contents based similarity metric for comparing {TFBS} motifs</i><br />
-
-Shaoqiang Zhang and Lifen Jiang and Chuanbin Du and Zhengchang Su. 6th {IEEE} International Conference on Systems Biology, {ISB} 2012, Xian, China, August 18-20, 2012: 2012 ,32--36</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i> A Simulated Annealing Algorithm for Resource Allocation and Scheduling with Precedence Constraints in the GLECLUBS/eGLECLUBS Pipelines</i><br />
-
-Shaoqiang Zhang and Huazhi Sun and Guojun Li and Zhengchang Su. 14th {IEEE} International Conference on Computational Science and Engineering, {CSE} 2011, Dalian, China, August 24-26, 2011:2011 ,421--426</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i> Resource and Bandwidth Allocation on a Computational Grid with Tree Topology</i><br />
-
-S. Zhang and C. Ding and G. Hou. 2006 Fifth International Conference on Grid and Cooperative Computing (GCC06): 2006(Oct) ,42-45</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i> An Efficient PTAS for Semiconductor Burn-in Scheduling with Release Dates to Minimize Maximum Delivery Time</i><br />
-
-ZHANG Shao-qiang, MA Xi-rong. MATHEMATICA APPLICATA: 2006 ,19(2) ,374-380</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i> Minimizing makespan with release times on identical parallel batching machines</i><br />
-
-Shuguang Li and Guojun Li and Shaoqiang Zhang. Discrete Applied Mathematics: 2005 ,148(1) ,127 - 134</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"> <i> A Linear Time Algorithm for the Minimum-weight Feedback Vertex Set Problem in Series-parallel Graphs</i><br />
-
-Zhang, Shao-qiang and Li, Guo-jun and Li, Shu-guang. Acta Mathematicae Applicatae Sinica: 2004 ,20(4),579--588</li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"> <i> Minimizing Maximum Lateness on Identical Parallel Batch Processing Machines</i><br />
-
-Shuguang Li and Guojun Li and Shaoqiang Zhang. Computing and Combinatorics, 10th Annual International Conference, {COCOON} 2004, Jeju Island, Korea, August 17-20, 2004, Proceedings: 2004,3106 ,229--237</li>
-
-
-<li class="STYLE9" style="margin: 0; padding: 0"> <i> 环形全光WDM网络的波长分配</i><br />
-
-李国君,张少强,Ousmane Samake,陈光亭. 应用数学学报: 2003 , 26(3)  </li>
-
-<li class="STYLE9" style="margin: 0; padding: 0"><i> 全光双向网络中的波长转换</i><br />
-
-张少强,李国君,李曙光. 软件学报: 2002 , 13(10) </li>
-
-        </ul>
-      </div>
-    </div>
-    <p align="center" class="STYLE7">&nbsp;</p>
-    <p>
-      </center>
-    </p>
-  </div>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
 </div>
 
 <div class="header_bottom"></div>
