--- a/teaching.htm
+++ b/teaching.htm
@@ -204,12 +204,13 @@ border: none;
 
 
 <h3><font size="3">本科授课(Undergraduate Teaching)</font></h3>
-<p>•	高等数学2-1 (校级优秀课) （Advanced Math.2-1）</p>
-<p>•	高等数学2-2 (课件下载) （Advanced Math.2-2）<a target="_blank" href="https://pan.baidu.com/share/init?surl=-fJQZaobnCKb6hqEWkpuzw">百度网盘课件下载链接</a>（提取码kc3w）</p>
+<p>•	高等数学2-1 (校级优秀课) （Advanced Math.2-1）<a target="_blank" href="https://pan.baidu.com/s/1jvzMLdSwIF_HSVfK2jEISg">百度网盘课件下载链接</a></p>
+<p>•	高等数学2-2 （Advanced Math.2-2）</p>
 <p>•	学校通识课： 信息与博弈(Information and Games)</p>
 <p>•	并行程序设计（Parallel programming)</p>
 <hr />
 <h3><font size="3">研究生授课(Graduate Teaching)</font></h3>
+<p>•	高等工程数学(Advanced Engineering Math.)</p>
 <p>•	并行计算(Parallel Computing)</p>
 <p>•	现代优化算法(Moden optimization algorithms)</p>
 <p>•	生物信息学(Bioinformatics)</p>
@@ -226,7 +227,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Aug 30,2018</p>
+			<p>Updated by Nov 30,2019</p>
 		</div>
 
 </div>
