--- a/contact.htm
+++ b/contact.htm
@@ -208,9 +208,8 @@ border: none;
 <p>计算机科学系,计算机与信息工程学院, </p>
 <p>天津师范大学, 天津市西青区宾水西道393号，300387</p>
 <p>电子邮箱：zhangshaoqiang @ tjnu.edu.cn </p>
-<p>实验室：博理楼C区225室
-</p>
-
+<p>办公室：博理楼D区304室</p>
+<p>实验室：博理楼C区225室</p>
 
 <hr />
 <p>ZHANG, Shaoqiang PhD/Professor</p>
