--- a/funds.htm
+++ b/funds.htm
@@ -212,44 +212,46 @@ border: none;
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 500px; height: 560px">
+            <div class="right_side" style="width: 500px; height: 670px">
 				<div class="article">
 					<h3><font size="3">主持项目</font></h3>
 
+<p>1.天津自然科学基金重点项目： “癌症基因组中的非编码区调控序列致病变异型的识别研究” （合同号19JCZDJC35100），2019-2022；</p>
 
-<p>1.现主持 国家自然科学基金面上项目： “ChIP-Seq数据的从头模体发现与RNA-Seq短序的从头组装算法研究” （批准号61572358），2015-2019；</p>
-
-
-<p>2.现主持 天津自然科学基金一般项目： “运用新一代测序数据对真核生物调控模块的从头预测研究” （批准号16JCYBJC23600），2016-2019；</p>
+<p>2.现主持 国家自然科学基金面上项目： “ChIP-Seq数据的从头模体发现与RNA-Seq短序的从头组装算法研究” （批准号61572358），2015-2019；</p>
 
 
-<p>3.主持完成 国家自然科学基金青年基金项目：“真菌顺式调控模体与模块的全基因组范围计算预测” （批准号61103073），2011-2014；</p>
+<p>3.主持完成 天津自然科学基金一般项目： “运用新一代测序数据对真核生物调控模块的从头预测研究” （批准号16JCYBJC23600），2016-2019；</p>
 
 
-<p>4.主持完成 天津自然科学基金面上项目：“真菌生物全基因组范围转录因子结合位点的计算预测研究”（项目号11JCYBJC26600），2011-2014；</p>
+<p>4.主持完成 国家自然科学基金青年基金项目：“真菌顺式调控模体与模块的全基因组范围计算预测” （批准号61103073），2011-2014；</p>
 
 
-<p>5.主持完成天津教委高校科技发展计划项目：“电路与网络中优化问题的算法分析与设计”（No.20071519, 2005年7月-2010年12月）</p>
+<p>5.主持完成 天津自然科学基金面上项目：“真菌生物全基因组范围转录因子结合位点的计算预测研究”（项目号11JCYBJC26600），2011-2014；</p>
+
+
+<p>6.主持完成天津教委高校科技发展计划项目：“电路与网络中优化问题的算法分析与设计” （No.20071519, 2005年7月-2010年12月）</p>
 
 
 
 
 <h3><font size="3">Research projects</font></h3>
 
+<p>1. "Identifying causal regulatory sequence variants in non-coding regions of cancer genomes", Key Program of Natural Science Funds of Tianjin (19JCZDJC35100), Apr 2019~Apr 2022, co-PI</p>
 
-<p>1. "Study on de novo prediction of regulatory modules in eukaryotes using next-generation sequencing data", Natural Science Foundation of Tianjin, Grant No. 16JCYBJC23600, April 2016~April 2019, PI;</p>
-
-
-<p>2. "Study on algorithms of ab initio motif finding in ChIP-Seq datasets and de novo sequence assembly for RNA-Seq reads",  funded by National Natural Science Foundation of China(NSFC),  Grant No.61572358, 2015-2019, PI;</p>
+<p>2. "Study on de novo prediction of regulatory modules in eukaryotes using next-generation sequencing data", Natural Science Foundation of Tianjin, Grant No. 16JCYBJC23600, April 2016~April 2019, PI;</p>
 
 
-<p>3. "Genome-wide computational prediction of cis-regulatory elements and modules in Fungi",  NSFC for Youth(No.61103073), 2011-2014, PI;</p>
+<p>3. "Study on algorithms of ab initio motif finding in ChIP-Seq datasets and de novo sequence assembly for RNA-Seq reads",  funded by National Natural Science Foundation of China(NSFC),  Grant No.61572358, 2015-2019, PI;</p>
 
 
-<p>4. "Study on computational prediction of transcription factor binding sites of Fungi in genome scale",  Natural Science Foundation of Tianjin, Grant No.11JCYBJC26600, 2011-2014, PI;</p>
+<p>4. "Genome-wide computational prediction of cis-regulatory elements and modules in Fungi",  NSFC for Youth(No.61103073), 2011-2014, PI;</p>
 
 
-<p>5. "Algorithmic design and analysis of some optimization problems in circuits and networks",  funded by Tianjin Municipal Commission of Education, No.20071519, 2005-2010, PI.</p>
+<p>5. "Study on computational prediction of transcription factor binding sites of Fungi in genome scale",  Natural Science Foundation of Tianjin, Grant No.11JCYBJC26600, 2011-2014, PI;</p>
+
+
+<p>6. "Algorithmic design and analysis of some optimization problems in circuits and networks",  funded by Tianjin Municipal Commission of Education, No.20071519, 2005-2010, PI.</p>
 
 
 					</div>
@@ -258,7 +260,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Aug 30,2018</p>
+			<p>Updated by Dec 15,2018</p>
 		</div>
 
 </div>
