--- a/computing.htm
+++ b/computing.htm
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>张少强, welcome to ZHANG, ShaoQiang's homepage!</title>
+<title>天津师范大学, 张少强, ZHANG Shaoqiang</title>
 <style type="text/css">
     body {
 	margin:0;
@@ -159,7 +159,7 @@ border: none;
 <div class="header_top"></div>
 <div class="header">
 <div class="subheader">
-<font size="5" color="#000000">ZHANG, Shaoqiang @ TJNU </font>
+<font size="5" color="#000000">ZHANG Shaoqiang @ TJNU </font>
 </div>
 <div id="tabsF">
   <ul>
