--- a/cv.htm
+++ b/cv.htm
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>张少强, welcome to ZHANG, ShaoQiang's homepage!</title>
+<title>天津师范大学, 张少强, ZHANG Shaoqiang</title>
 <style type="text/css">
     body {
 	margin:0;
@@ -171,7 +171,7 @@ border: none;
 <div class="header_top"></div>
 <div class="header">
 <div class="subheader">
-<font size="5" color="#000000">ZHANG, Shaoqiang @ TJNU </font>
+<font size="5" color="#000000">ZHANG Shaoqiang @ TJNU </font>
 </div>
 <div id="tabsF">
   <ul>
@@ -221,34 +221,27 @@ border: none;
             <div class="right_side" style="width: 500px; height: 560px">
 				<div class="article">
 					<h3>&nbsp;</h3>
-					<h3><font size="3">教育背景 </font></h3>
+					<h3><font size="3">教育背景(Education) </font></h3>
 			
-<p>美国北卡罗来纳大学    生物信息学，博士后 |2007.3-2010.7</p>
+<p>•美国北卡罗来纳大学夏洛特分校，生物信息学，博士后 |2007.3-2010.7</p>
 
-<p>山东大学  数学学院,硕博连读研究生，运筹学与控制论专业，博士 | 1999.9-2004.6</p>
+<p>•山东大学  数学学院,硕博连读研究生，运筹学与控制论专业，博士 | 1999.9-2004.6</p>
 
-<p>山东大学  数学学院,运筹学专业，本科，学士 | 1994.9-1998.7</p>
+<p>•山东大学  数学学院,运筹学专业，本科，学士 | 1994.9-1998.7</p>
 
-<p>1994-1998, B.Sc., Major in Operations Research, School of Mathematics, Shandong University, Jinan, Shandong Province, China</p>
+<p>◦1994-1998, B.Sc., Major in Operations Research, School of Mathematics, Shandong University, Jinan, Shandong Province, China</p>
 
-<p>1999-2004, Ph.D., Major in Operations Research, School of Mathematics, Shandong University, Jinan, Shandong Province, China</p>
+<p>◦1999-2004, Ph.D., Major in Operations Research, School of Mathematics, Shandong University, Jinan, Shandong Province, China</p>
 
 <hr />
 
-<h3><font size="3">工作经历 </font></h3>
+<h3><font size="3">工作经历(Academy) </font></h3>
 
 
 <p>•天津师范大学  计算机与信息工程学院,教授 | 2012.10-至今</p>
-
-
 <p>•美国北卡罗来纳大学夏洛特分校  生物信息学与基因组学系,博士后 | 2007.4-2010.7</p>
-
-
 <p>•天津师范大学  计算机与信息工程学院,副教授 | 2006.10-2012.9</p>
-
-
-
-
+<p>•天津师范大学  计算机与信息工程学院,讲师 | 2004.6-2006.9</p>
 
 <p>◦2004-2006, Assistant Professor, College of Computer and Information Engeering, Tianjin Normal University, Tianjin, China</p>
 
@@ -262,15 +255,13 @@ border: none;
 <p>◦2012-present, Professor, College of Computer and Information Engineering, Tianjin Normal University, Tianjin, China</p>
 
 
-
-
 					</div>
             </div>	
 </div>
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Dec 14,2019</p>
+			<p>Updated by Jan 14,2020</p>
 		</div>
 
 </div>
