--- a/funds.htm
+++ b/funds.htm
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>张少强, welcome to ZHANG, ShaoQiang's homepage!</title>
+<title>天津师范大学, 张少强, ZHANG Shaoqiang</title>
 <style type="text/css">
     body {
 	margin:0;
@@ -171,7 +171,7 @@ border: none;
 <div class="header_top"></div>
 <div class="header">
 <div class="subheader">
-<font size="5" color="#000000">ZHANG, Shaoqiang @ TJNU </font>
+<font size="5" color="#000000">ZHANG Shaoqiang @ TJNU </font>
 </div>
 <div id="tabsF">
   <ul>
@@ -212,13 +212,13 @@ border: none;
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 500px; height: 670px">
+            <div class="right_side" style="width: 500px; height: 800px">
 				<div class="article">
 					<h3><font size="3">主持项目</font></h3>
 
-<p>1.天津自然科学基金重点项目： “癌症基因组中的非编码区调控序列致病变异型的识别研究” （合同号19JCZDJC35100），2019-2022；</p>
+<p>1.现主持 天津自然科学基金重点项目： “癌症基因组中的非编码区调控序列致病变异型的识别研究” （合同号19JCZDJC35100），2019-2022；</p>
 
-<p>2.现主持 国家自然科学基金面上项目： “ChIP-Seq数据的从头模体发现与RNA-Seq短序的从头组装算法研究” （批准号61572358），2015-2019；</p>
+<p>2.主持完成 国家自然科学基金面上项目： “ChIP-Seq数据的从头模体发现与RNA-Seq短序的从头组装算法研究” （批准号61572358），2015-2019；</p>
 
 
 <p>3.主持完成 天津自然科学基金一般项目： “运用新一代测序数据对真核生物调控模块的从头预测研究” （批准号16JCYBJC23600），2016-2019；</p>
@@ -260,7 +260,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Dec 15,2018</p>
+			<p>Updated by Jan 15,2020</p>
 		</div>
 
 </div>
