--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>张少强, welcome to ZHANG, ShaoQiang's homepage!</title>
+<title>天津师范大学, 张少强,ZHANG Shaoqiang</title>
 <style type="text/css">
     body {
 	margin:0;
@@ -171,7 +171,7 @@ border: none;
 <div class="header_top"></div>
 <div class="header">
 <div class="subheader">
-<font size="5" color="#000000">ZHANG, Shaoqiang @ TJNU </font>
+<font size="5" color="#000000">ZHANG Shaoqiang @ TJNU </font>
 </div>
 <div id="tabsF">
   <ul>
@@ -217,12 +217,11 @@ border: none;
 					<h3>&nbsp;</h3>
 					<h3><font size="3"> </font></h3>
 					
-					<p><font size="3">*****本学期开设课程（2019年秋季）*****</font></p>
-					<p><font size="2">1. 2019级计算机科学与技术专业基础课《高等数学2-1》。</p> <i><a target="_blank" href="https://pan.baidu.com/s/1jvzMLdSwIF_HSVfK2jEISg">
+					<p><font size="3">*****本学期开设课程（2020年春季）*****</font></p>
+					<p><font size="2">1. 2019级计算机科学与技术专业基础课《高等数学2-2》</p> <i><a target="_blank" href="https://pan.baidu.com/s/1R4EDDWqoHl_QKpO9NByCDA">
 					<span style="TEXT-DECORATION: none">百度网盘课件下载链接</span></a></i>
 
-					<h3>&nbsp;</h3>
-										<p><font size="2">2. 研究生课程《高等工程数学》。<i><a target="_blank" href=" ">
+										<p><font size="2">2. 2019级研究生课程《高等工程数学》<i><a target="_blank" href=" ">
 					<span style="TEXT-DECORATION: none">百度网盘课件下载 </span></a></i>
 					<h3>&nbsp;</h3>
 
@@ -231,21 +230,21 @@ border: none;
 					<p><a target="_blank" href="http://">
 					<img border="0" src="images/bioinfologo.gif" width="266" height="170" align="right"></a></p>
 					
-					<p><font size="2">张少强 (天津师范大学, 教授)</p>
+					<p><font size="2">张少强 博士(天津师范大学, 教授)</p>
 					<p>研究兴趣：生物信息学, 高性能计算, 组合优化</p>
 
 					<p>主要工作是运用组合优化等算法通过高性能计算对基因组序列进行功能预测。
 					最近主要工作包括对新一代测序数据的模体发现、序列拼接、基因组非编码区域功能预测等。</p></font>
 					<p>The main work is to use combinatorial optimization techiques to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes motif finding, sequence assembly, and functional prediction of non-coding regions.</p>
+Recent work mainly includes motif finding, sequence assembly, and functional prediction of non-coding regions based on Next-generation Sequencing.</p>
 					</div>
             </div>	
 </div>
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Nov 30,2019</p>
+			<p>Updated by Jan 30,2020</p>
 		</div>
 
 </div>
