--- a/teaching.htm
+++ b/teaching.htm
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>张少强, welcome to ZHANG, ShaoQiang's homepage!</title>
+<title>天津师范大学, 张少强, ZHANG Shaoqiang</title>
 <style type="text/css">
     body {
 	margin:0;
@@ -159,7 +159,7 @@ border: none;
 <div class="header_top"></div>
 <div class="header">
 <div class="subheader">
-<font size="5" color="#000000">ZHANG, Shaoqiang @ TJNU </font>
+<font size="5" color="#000000">ZHANG Shaoqiang @ TJNU </font>
 </div>
 <div id="tabsF">
   <ul>
@@ -204,7 +204,7 @@ border: none;
 
 
 <h3><font size="3">本科授课(Undergraduate Teaching)</font></h3>
-<p>•	高等数学2-1 (校级优秀课) （Advanced Math.2-1）<a target="_blank" href="https://pan.baidu.com/s/1jvzMLdSwIF_HSVfK2jEISg">百度网盘课件下载链接</a></p>
+<p>•	高等数学2-1 (校级优秀课) （Advanced Math.2-1）</p>
 <p>•	高等数学2-2 （Advanced Math.2-2）</p>
 <p>•	学校通识课： 信息与博弈(Information and Games)</p>
 <p>•	并行程序设计（Parallel programming)</p>
