--- a/grad.htm
+++ b/grad.htm
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>张少强, welcome to ZHANG, ShaoQiang's homepage!</title>
+<title>天津师范大学, 张少强, ZHANG Shaoqiang</title>
 <style type="text/css">
     body {
 	margin:0;
@@ -159,7 +159,7 @@ border: none;
 <div class="header_top"></div>
 <div class="header">
 <div class="subheader">
-<font size="5" color="#000000">ZHANG, Shaoqiang @ TJNU </font>
+<font size="5" color="#000000">ZHANG Shaoqiang @ TJNU </font>
 </div>
 <div id="tabsF">
   <ul>
@@ -212,13 +212,13 @@ border: none;
 <p>&nbsp;	崔雅轩（2019级）
 <hr />
 <p>•	已毕业研究生（24名）：</p>
-<p>&nbsp;	2007：丁春勇(天津师范大学)；侯刚(中国人民银行天津支行)</p>
-<p>&nbsp;	2012：车振凯(天津音乐学院)；陈超(VOLVO)；柴秀琴(天津工业大学)</p>
-<p>&nbsp;	2013：连高欣(天津气象局)；陈龙鑫(福州大学)</p>
-<p>&nbsp;	2014：耿丹丹(北京 BioMarker Tech.)；汪珩(天津高新区)；韩旭(长春教委)</p>
-<p>&nbsp;	2015：张蕊 (天津市第一中级人民法院)；张甜 (天津师范大学滨海附属小学)；宁静雁 (大同大学)；王芳(江苏淮安市清浦开明中学)</p>
-<p>&nbsp;	2016：张莹（国家电网新疆电力公司)</p>
-<p>&nbsp;	2017：李静（天津南开国税局）；张志红</p>
+<p>&nbsp;	2007：丁春勇；侯刚</p>
+<p>&nbsp;	2012：车振凯；陈超；柴秀琴</p>
+<p>&nbsp;	2013：连高欣；陈龙鑫</p>
+<p>&nbsp;	2014：耿丹丹；汪珩；韩旭</p>
+<p>&nbsp;	2015：张蕊；张甜；宁静雁；王芳</p>
+<p>&nbsp;	2016：张莹</p>
+<p>&nbsp;	2017：李静；张志红</p>
 <p>&nbsp;	2018：李婷，陈艳楠</p>
 <p>&nbsp;	2019：武思文，冯艳霞，李艳慧，邵帅，薛利祥</p>
 <hr />
