--- a/patents.htm
+++ b/patents.htm
@@ -204,12 +204,11 @@ border: none;
 <h3><font size="3">专利申请 </font></h3>
 <hr />
 
-<p>1.	周曦国，张少强，刘岩凯：多功能体质测试仪，专利号CN201210488544.8</p>
-<p>2.	周曦国，张少强，刘岩凯：一种多功能体质测试仪，专利号CN201220633438.X</p>
-<p>3.	赵欣 张少强：基于疾病特征的医学信息本体数据库的建立方法，申请号 201410844664.6</p>
-<p>4.	赵欣 张少强：基于医学信息本体数据库的关联药品的自我分析方法，申请号201410847777.1</p>
-<p>5.	赵欣 张少强：基于疾病圈数据信息的自我诊疗方法，申请号201410848793.2</p>
-<p>6.	赵欣 张少强：基于医学信息本体数据库的疾病自我分析方法，申请号201410848794.7</p>
+<p>1.	周曦国，张少强，刘岩凯：一种多功能体质测试仪，专利号 CN202892098U，2013.04.24</p>
+<p>2.	赵欣 张少强：基于疾病特征的医学信息本体数据库的建立方法，专利号 <a target="_blank" href="http://epub.sipo.gov.cn/tdcdesc.action?strWhere=CN104463754A">CN104463754A</a>，2015.03.25</p>
+<p>3.	赵欣 张少强：基于医学信息本体数据库的关联药品的自我分析方法，专利号 <a target="_blank" href="http://epub.sipo.gov.cn/tdcdesc.action?strWhere=CN104504119A">CN104504119A</a>，2015.04.08</p>
+<p>4.	赵欣 张少强：基于疾病圈数据信息的自我诊疗方法，专利号 <a target="_blank" href="http://epub.sipo.gov.cn/tdcdesc.action?strWhere=CN104484844A">CN104484844A</a>，2015.04.01</p>
+<p>5.	赵欣 张少强：基于医学信息本体数据库的疾病自我分析方法，专利号 <a target="_blank" href="http://epub.sipo.gov.cn/tdcdesc.action?strWhere=CN104484845A">CN104484845A</a>，2015.04.01</p>
 
 
 
