--- a/computing.htm
+++ b/computing.htm
@@ -231,7 +231,7 @@ border: none;
 <p>MotifClick: A novel motif finding tool for predicting transcription factor binding sites.
  (The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/21679436">PMID:21679436)</a></p>
 <p>Website: <a target="_blank" href="http://motifclick.uncc.edu"> http://motifclick.uncc.edu</a></p>
-<p> Source code: <a target="_blank" href="http://motifclick.uncc.edu">https://github.com/shaoqiangzhang/motifclick</a></p>
+<p> Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/motifclick">https://github.com/shaoqiangzhang/motifclick</a></p>
 
 <hr />
 
