--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ border: none;
 	
 	
 </style>
+
 </head>
 
 <body>
@@ -245,6 +246,7 @@ Recent work mainly includes motif finding, sequence assembly, and functional pre
 <div class="header_bottom"></div>
 <div class="footer">
 			<p>Updated by Jan 30,2020</p>
+			<a href="http://www.reliablecounter.com" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=shaoqiangzhang.github.io&digit=style/plain/12/&reloads=1" alt="reliablecounter.com" title="reliablecounter.com" border="0"></a><br /><a href="http://relia" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">count</a>
 		</div>
 
 </div>
