--- a/grad.htm
+++ b/grad.htm
@@ -192,7 +192,7 @@ border: none;
 				<div class="box" style="width: 144px; height: 500px">
 					<p>
 					
-					<font size="2">•	2020级拟招收研究生2名（计算机科学学硕1名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, 英语四级以上，研究生初试成绩300分以上。 </font>
+					<font size="2">•	2021级拟招收研究生3名（计算机科学学硕2名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, Python, 英语四级以上，研究生初试成绩300分以上。 </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
@@ -207,11 +207,11 @@ border: none;
 
 
 
-<p>•	现指导研究生3名：
-<p>&nbsp;	刘玥晗，时仲祎（2018级）
+<p>•	现指导研究生5名：
 <p>&nbsp;	崔雅轩（2019级）
+<p>&nbsp; 李荔暄；谢林娟；崔可光；李帅（2020级）
 <hr />
-<p>•	已毕业研究生（24名）：</p>
+<p>•	已毕业研究生（26名）：</p>
 <p>&nbsp;	2007：丁春勇；侯刚</p>
 <p>&nbsp;	2012：车振凯；陈超；柴秀琴</p>
 <p>&nbsp;	2013：连高欣；陈龙鑫</p>
@@ -221,6 +221,7 @@ border: none;
 <p>&nbsp;	2017：李静；张志红</p>
 <p>&nbsp;	2018：李婷，陈艳楠</p>
 <p>&nbsp;	2019：武思文，冯艳霞，李艳慧，邵帅，薛利祥</p>
+<p>&nbsp;	2020: 刘玥晗，时仲祎	</p>
 <hr />
 <p></p>
 
@@ -235,7 +236,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Nov 30,2019</p>
+			<p>Updated by Nov 30,2020</p>
 		</div>
 
 </div>
