--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@ border: none;
 					<h3>&nbsp;</h3>
 					<h3><font size="3"> </font></h3>
 					
-					<p><font size="3">*****本学期开设课程（2021年春季）*****</font></p>
-					<p><font size="2">1. 2020级计算机科学与技术专业基础课《高等数学2-2》</p> <i><a target="_blank" href="https://pan.baidu.com/s/1R4EDDWqoHl_QKpO9NByCDA">
+					<p><font size="3">*****本学期开设课程（2021年秋季）*****</font></p>
+					<p><font size="2">1. 2021级计算机科学与技术专业基础课《高等数学2-2》</p> <i><a target="_blank" href=" ">
 					<span style="TEXT-DECORATION: none">百度网盘课件下载链接</span></a></i>
 
-										<p><font size="2">2. 2020级研究生课程《高等工程数学》<i><a target="_blank" href=" ">
+										<p><font size="2">2. 校通识课《信息与博弈》<i><a target="_blank" href=" ">
 					<span style="TEXT-DECORATION: none">百度网盘课件下载 </span></a></i>
 					<h3>&nbsp;</h3>
 
