--- a/grad.htm
+++ b/grad.htm
@@ -192,7 +192,7 @@ border: none;
 				<div class="box" style="width: 144px; height: 500px">
 					<p>
 					
-					<font size="2">•	2021级拟招收研究生3名（计算机科学学硕2名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, Python, 英语四级以上，研究生初试成绩300分以上。 </font>
+					<font size="2">•	2022级拟招收研究生3名（计算机科学学硕2名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, Python, 英语四级以上，研究生初试成绩300分以上。 </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
@@ -207,9 +207,10 @@ border: none;
 
 
 
-<p>•	现指导研究生5名：
+<p>•	现指导研究生9名：
 <p>&nbsp;	崔雅轩（2019级）
 <p>&nbsp; 李荔暄；谢林娟；崔可光；李帅（2020级）
+<p>&nbsp; 潘镜伊；雷添媛；秦璐；朱邦瑜（2021级）
 <hr />
 <p>•	已毕业研究生（26名）：</p>
 <p>&nbsp;	2007：丁春勇；侯刚</p>
@@ -236,7 +237,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Nov 30,2020</p>
+			<p>Updated by Sept 30,2021</p>
 		</div>
 
 </div>
