--- a/computing.htm
+++ b/computing.htm
@@ -209,7 +209,13 @@ border: none;
 
 <h3><font size="3">开发的计算工具 </font></h3>
 <hr />
+<p>•SCENA：单细胞RNA测序数据的细胞聚类算法。</p>
+<p> Consensus clustering of single-cell RNA-seq data by enhancing network affinity
+(The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34160582/">34160582)</a></p>
+<p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/SCENA">https://github.com/shaoqiangzhang/SCENA</a> 
+</p>
 
+<hr />
 
 <p>•GLECLUBS：单一原核生物全基因组范围转录因子结合位点预测算法。</p>
 <p> GLECLUBS: an algorithm for predicting cis-regulatory binding sites in a prokaryotic genome.
