--- a/computing.htm
+++ b/computing.htm
@@ -191,7 +191,8 @@ border: none;
 				<div class="box" style="width: 144px; height: 900px">
 					<p>
 					
-					<font size="2"> <p>GLECLUBS</p>
+					<font size="2"> <p>SCENA</p>
+						<p>GLECLUBS</p>
 <p>eGLECLUBS</p>
 <p>MotifClick</p>
 <p>SPIC</p>
