--- a/pub.htm
+++ b/pub.htm
@@ -213,7 +213,7 @@ border: none;
   <div class="article">
     <h2 align="center" class="STYLE7"><p>Selected Publications</p></h2>
     <div class="page">
-	    <p>Cui Y, Zhang S, Liang Y, Wang X, Ferraro TN, Chen Y. Consensus clustering of single-cell RNA-seq data by enhancing network affinity. Brief Bioinform. 2021 Jun 23:bbab236. doi: 10.1093/bib/bbab236. Epub ahead of print. PMID: 34160582. </p>
+<p>[1]. Cui Y, Zhang S, Liang Y, Wang X, Ferraro TN, Chen Y. Consensus clustering of single-cell RNA-seq data by enhancing network affinity. Brief Bioinform. 2021 Jun 23:bbab236. doi: 10.1093/bib/bbab236. Epub ahead of print. PMID: 34160582. </p>
 <p>[2].	Li, Yang and Ni, Pengyu and Zhang, Shaoqiang and Li, Guojun and Su, Zhengchang. ProSampler: an ultra-fast and accurate motif finder in large ChIP-seq datasets for combinatory motif discovery, Bioinformatics: 2019</p>
 <p>[3].	Shaoqiang Zhang, Ying Liang, Xiangyun Wang, Zhengchang Su, and Yong Chen. FisherMP: Fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets, DNA Research: June 2019 ,26(3) ,231–242</p>
 <p>[4].	武思文，李静，张少强. 基于RNA-Seq数据集的转录组从头拼接算法, 计算机科学: 2018 ,45(12) ,308-312</p>
