--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@ border: none;
 					<h3>&nbsp;</h3>
 					<h3><font size="3"> </font></h3>
 					
-					<p><font size="3">*****本学期开设课程（2021年秋季）*****</font></p>
+					<p><font size="3">*****本学期开设课程（2022年春季）*****</font></p>
 					<p><font size="2">1. 2021级计算机科学与技术专业基础课《高等数学2-2》</p> <i><a target="_blank" href=" ">
 					<span style="TEXT-DECORATION: none">百度网盘课件下载链接</span></a></i>
 
-										<p><font size="2">2. 校通识课《信息与博弈》<i><a target="_blank" href=" ">
+										<p><font size="2">2. 研究生课程《高等工程数学》<i><a target="_blank" href=" ">
 					<span style="TEXT-DECORATION: none">百度网盘课件下载 </span></a></i>
 					<h3>&nbsp;</h3>
 
@@ -235,10 +235,10 @@ border: none;
 					<p>研究兴趣：生物信息学, 高性能计算, 组合优化</p>
 
 					<p>主要工作是运用组合优化等算法通过高性能计算对基因组序列进行功能预测。
-					最近主要工作包括对新一代测序数据的模体发现、序列拼接、基因组非编码区域功能预测等。</p></font>
+					最近主要工作包括对新一代测序数据的模体发现、序列拼接、基因组非编码区域功能预测、单细胞和空间转录组学数据分析等。</p></font>
 					<p>The main work is to use combinatorial optimization techiques to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes motif finding, sequence assembly, and functional prediction of non-coding regions based on Next-generation Sequencing.</p>
+Recent work mainly includes motif finding, sequence assembly, and functional prediction of non-coding regions based on Next-generation Sequencing, analysis on single-cell sequencing and spatial transcriptomics.</p>
 					</div>
             </div>	
 </div>
