--- a/index.html
+++ b/index.html
@@ -235,17 +235,17 @@ border: none;
 					<p>研究兴趣：生物信息学, 高性能计算, 组合优化</p>
 
 					<p>主要工作是运用组合优化等算法通过高性能计算对基因组序列进行功能预测。
-					最近主要工作包括对新一代测序数据的模体发现、序列拼接、基因组非编码区域功能预测、单细胞和空间转录组学数据分析等。</p></font>
+					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞和空间转录组学数据分析等。</p></font>
 					<p>The main work is to use combinatorial optimization techiques to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes motif finding, sequence assembly, and functional prediction of non-coding regions based on Next-generation Sequencing, analysis on single-cell sequencing and spatial transcriptomics.</p>
+Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell sequencing and spatial transcriptomics.</p>
 					</div>
             </div>	
 </div>
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Jan 30,2021</p>
+			<p>Updated by Mar 30,2022</p>
 			
 
 </div>
