--- a/cv.htm
+++ b/cv.htm
@@ -209,7 +209,7 @@ border: none;
 <font size="2">
 <p>•<a target="_blank" href="http://www.researchgate.net/profile/Shaoqiang_Zhang">ResearchGate</a></p>
 <p>•<a target="_blank" href="http://orcid.org/0000-0002-4127-0539">ORCID</a></p>
-<p>•<a target="_blank" href="http://xueshu.baidu.com/scholarID/CN-B89CH9RJ">百度学术</a></p>
+<p>•<a target="_blank" href="https://publons.com/researcher/2918184/shaoqiang-zhang/">Publons</a></p>
 
 
 
