--- a/cv.htm
+++ b/cv.htm
@@ -210,6 +210,7 @@ border: none;
 <p>•<a target="_blank" href="http://www.researchgate.net/profile/Shaoqiang_Zhang">ResearchGate</a></p>
 <p>•<a target="_blank" href="http://orcid.org/0000-0002-4127-0539">ORCID</a></p>
 <p>•<a target="_blank" href="https://publons.com/researcher/2918184/shaoqiang-zhang/">Publons</a></p>
+<p>•<a target="_blank" href="https://www.scholarmate.com/P/sqzhang">科研之友s</a></p>
 
 
 
