--- a/grad.htm
+++ b/grad.htm
@@ -192,7 +192,7 @@ border: none;
 				<div class="box" style="width: 144px; height: 500px">
 					<p>
 					
-					<font size="2">•	2022级拟招收研究生3名（计算机科学学硕2名，软件工程专硕1名），要求：对生物信息计算或高性能计算感兴趣，熟悉C/C++, Python, 英语四级以上，研究生初试成绩300分以上。 </font>
+					<font size="2">•每年招收研究生2-4名（计算机科学学硕1~2名，软件工程专硕1~2名），方向为生物信息学（机器学习与高性能计算）。 </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
