--- a/computing.htm
+++ b/computing.htm
@@ -191,13 +191,14 @@ border: none;
 				<div class="box" style="width: 144px; height: 900px">
 					<p>
 					
-					<font size="2"> <p>SCENA</p>
-						<p>GLECLUBS</p>
+<font size="2"> <p>DEGman</p>
+	<p>SCENA</p>
+	<p>FisherMP</p>
+	<p>MotifClick</p>
+<p>GLECLUBS</p>
 <p>eGLECLUBS</p>
-<p>MotifClick</p>
 <p>SPIC</p>
 <p>CLIMP</p>
-<p>FisherMP</p>
 <p>StepLink</p><p>CREMP</p></font>
 				</div>
 				<div class="box_bottom"></div>
@@ -210,13 +211,25 @@ border: none;
 
 <h3><font size="3">开发的计算工具 </font></h3>
 <hr />
-<p>•SCENA：单细胞RNA测序数据的细胞聚类算法。</p>
+<p>•DEGman：单细胞RNA测序数据的差异基因分析工具。(2022)</p>
+<p> differentially-expressed genes of scRNA-seq data
+(The related article: <a target="_blank" href="https://">preprint)</a></p>
+<p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/DEGman">https://github.com/shaoqiangzhang/DEGman</a> 
+</p>
+<hr />
+<p>•SCENA：单细胞RNA测序数据的细胞聚类算法。(2021)</p>
 <p> Consensus clustering of single-cell RNA-seq data by enhancing network affinity
 (The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34160582/">34160582)</a></p>
 <p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/SCENA">https://github.com/shaoqiangzhang/SCENA</a> 
 </p>
 
 <hr />
+<p>•FisherMP：对ChIP-Seq结合峰数据进行模体发现的高效并行算法工具。(2019)</p>
+
+<p>FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/30957858">PMID:30957858</a>)</p>
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/fishermp"> https://github.com/shaoqiangzhang/fishermp </a></p>
+
+<hr />					
 
 <p>•GLECLUBS：单一原核生物全基因组范围转录因子结合位点预测算法。</p>
 <p> GLECLUBS: an algorithm for predicting cis-regulatory binding sites in a prokaryotic genome.
@@ -249,18 +262,11 @@ border: none;
 
 <hr />
 
-<p>•CLIMP：一个大规模模体数据并行聚类算法。</p>
+<p>•CLIMP：一个大规模模体数据并行聚类算法。(2016)</p>
 
 <p>CLIMP：a clustering algorithm for massive data with openMP parallel computing design (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/27487245">PMID:27487245</a>)</p>
 
 <p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/climp"> https://github.com/shaoqiangzhang/climp</a></p> 
-
-<hr />
-
-<p>•FisherMP：对ChIP-Seq结合峰数据进行模体发现的高效并行算法工具。</p>
-
-<p>FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/30957858">PMID:30957858</a>)</p>
-<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/fishermp"> https://github.com/shaoqiangzhang/fishermp </a></p>
 
 <hr />
 
@@ -278,7 +284,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Sept 30,2021</p>
+			<p>Updated by Mar 30,2022</p>
 		</div>
 
 </div>
