--- a/grad.htm
+++ b/grad.htm
@@ -207,9 +207,8 @@ border: none;
 
 
 
-<p>•	现指导研究生9名：
-<p>&nbsp;	崔雅轩（2019级）
-<p>&nbsp; 李荔暄；谢林娟；崔可光；李帅（2020级）
+<p>•	现指导研究生9名：	
+<p>&nbsp; 李荔暄；谢林娟（2020级）
 <p>&nbsp; 潘镜伊；雷添媛；秦璐；朱邦瑜（2021级）
 <hr />
 <p>•	已毕业研究生（26名）：</p>
@@ -223,6 +222,7 @@ border: none;
 <p>&nbsp;	2018：李婷，陈艳楠</p>
 <p>&nbsp;	2019：武思文，冯艳霞，李艳慧，邵帅，薛利祥</p>
 <p>&nbsp;	2020: 刘玥晗，时仲祎	</p>
+<p>&nbsp;2022：崔雅轩，崔可光，李帅</p>
 <hr />
 <p></p>
 
