--- a/grad.htm
+++ b/grad.htm
@@ -207,11 +207,12 @@ border: none;
 
 
 
-<p>•	现指导研究生9名：	
+<p>•	现指导研究生6名：	
 <p>&nbsp; 李荔暄；谢林娟（2020级）
 <p>&nbsp; 潘镜伊；雷添媛；秦璐；朱邦瑜（2021级）
+<p>&nbsp; （2022级）
 <hr />
-<p>•	已毕业研究生（26名）：</p>
+<p>•	已毕业研究生（29名）：</p>
 <p>&nbsp;	2007：丁春勇；侯刚</p>
 <p>&nbsp;	2012：车振凯；陈超；柴秀琴</p>
 <p>&nbsp;	2013：连高欣；陈龙鑫</p>
