--- a/pub.htm
+++ b/pub.htm
@@ -213,39 +213,7 @@ border: none;
   <div class="article">
     <h2 align="center" class="STYLE7"><p>Selected Publications</p></h2>
     <div class="page">
-<p>[1]. Cui Y, Zhang S, Liang Y, Wang X, Ferraro TN, Chen Y. Consensus clustering of single-cell RNA-seq data by enhancing network affinity. Brief Bioinform. 2021 Jun 23:bbab236. doi: 10.1093/bib/bbab236. Epub ahead of print. PMID: 34160582. </p>
-<p>[2].	Li, Yang and Ni, Pengyu and Zhang, Shaoqiang and Li, Guojun and Su, Zhengchang. ProSampler: an ultra-fast and accurate motif finder in large ChIP-seq datasets for combinatory motif discovery, Bioinformatics: 2019</p>
-<p>[3].	Shaoqiang Zhang, Ying Liang, Xiangyun Wang, Zhengchang Su, and Yong Chen. FisherMP: Fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets, DNA Research: June 2019 ,26(3) ,231–242</p>
-<p>[4].	武思文，李静，张少强. 基于RNA-Seq数据集的转录组从头拼接算法, 计算机科学: 2018 ,45(12) ,308-312</p>
-<p>[5].	Zhao, Li and Yang, Lianhe and Zhang, Shaoqiang and Liang, Jinglian. A Cooperative Artificial Bee Colony Algorithm and Its Application to Fashion Color Forecast in Clothing. Proceedings of the 2018 2Nd International Conference on Algorithms, Computing and Systems: 2018 ,21--25</p>
-<p>[6].	冯艳霞, 张志红, 张少强. 基于染色质免疫共沉淀的高通量测序数据集的 顺式调控模体发现算法. 计算机应用: 2018 ,38(6) ,1829-1830</p>
-<p>[7].	Liancui Zuo and Jingyi Zhou and Shaoqiang Zhang. The diameter and Wiener index of modular product graphs. Ars Comb.: 2018 ,140 ,267--275</p>
-<p>[8].	Liancui Zuo and Chunhong Shang and Shaoqiang Zhang and Shengjie He. The linear t-arboricity of complete bipartite graphs. Ars Comb.: 2018 ,137 ,355--364</p>
-<p>[9].	Li Haitao, Wang Congmin, Chen Yong, Zhang Shaoqiang,Yang Rongya. Integrated transcriptomic analysis of Trichosporon Asahii uncovers the core genes and pathways of fluconazole resistance. Scientific Reports: 2017 ,7 ,17847</p>
-<p>[10].	Liancui Zuo andShasha Ma and Shaoqiang Zhang.  Equitable coloring of Cartesian product of some graphs. Ars Comb.: 2017 ,134 ,325--337</p>
-<p>[11].	Zhang, Shaoqiang and Chen, Yong. CLIMP: Clustering Motifs via Maximal Cliques with Parallel Computing Design. PLOS ONE: 2016 ,11 ,1-17</p>
-<p>[12].	Yong Chen, Dandan Geng, Kristina Ehrhardt, Shaoqiang Zhang.  Investigating Evolutionary Dynamics of RHA1 Operons. Evolutionary Bioinformatics: 2016 ,12 ,157--163</p>
-<p>[13].	Liancui Zuo , Bitao Zhang, and Shaoqiang Zhang. The k-Path Vertex Cover in Product Graphs of Stars and Complete Graphs. IAENG International Journal of Applied Mathematics: 2016 ,46(1)</p>
-<p>[14].	Zuo, L. and Wu, F. and Zhang, S..  Equitable colorings of cartesian products of fans with bipartite graphs. Italian Journal of Pure and Applied Mathematics: 2015 ,35 ,91−100</p>
-<p>[15].	Zuo, L., Wu, F., Zhang, S.. Equitable Colorings of Cartesian Product Graphs of Wheels with Complete Bipartite Graphs. WSEAS TRANSACTIONS on MATHEMATICS: 2014 ,13 ,236-245</p>
-<p>[16].	Zhang, Shaoqiang and Zhou, Xiguo and Du, Chuanbin and Su, Zhengchang. SPIC: A novel similarity metric for comparing transcription factor binding site motifs based on information contents. BMC Systems Biology: 2013 ,7(2) ,S14</p>
-<p>[17].	耿丹丹 ， Simon Cichello ， 张少强 ， 陈勇.  Evolution and Function of Prokaryotic Dynamin-Like Proteins. Aata Biophysica Sinica (生物物理学报): 2013 ,29(9) ,646-657</p>
-<p>[18].	Zhang, Shaoqiang and Li, Shan and Niu, Meng and Pham, Phuc T. and Su, Zhengchang. MotifClick: prediction of cis-regulatory binding sites via merging cliques. BMC Bioinformatics: 2011 ,12(1) ,238</p>
-<p>[19].	Zhang, Shaoqiang and Li, Shan and Pham, Phuc T. and Su, Zhengchang.  Simultaneous prediction of transcription factor binding sites in a group of prokaryotic genomes. BMC Bioinformatics: 2010 ,11(1) ,397</p>
-<p>[20].	Zhang, Shaoqiang and Xu, Minli and Li, Shan and Su, Zhengchang. Genome-wide de novo prediction of cis-regulatory binding sites in prokaryotes. Nucleic Acids Research: 2009 ,37(10) ,e72</p>
-<p>[21].	Shaoqiang Zhang and Lifen Jiang and Chuanbin Du and Zhengchang Su. A novel information contents based similarity metric for comparing {TFBS} motifs. 6th  IEEE International Conference on Systems Biology, ISB2012, Xian, China, August 18-20, 2012: 2012 ,32--36</p>
-<p>[22].	Shaoqiang Zhang and Huazhi Sun and Guojun Li and Zhengchang Su. A Simulated Annealing Algorithm for Resource Allocation and Scheduling with Precedence Constraints in the GLECLUBS/eGLECLUBS Pipelines. 14th {IEEE} International Conference on Computational Science and Engineering, {CSE} 2011, Dalian, China, August 24-26, 2011: 2011 ,421--426</p>
-<p>[23].	S. Zhang and C. Ding and G. Hou. Resource and Bandwidth Allocation on a Computational Grid with Tree Topology. 2006 Fifth International Conference on Grid and Cooperative Computing (GCC06): 2006(Oct) ,42-45</p>
-<p>[24].	ZHANG Shao-qiang, MA Xi-rong. An Efficient PTAS for Semiconductor Burn-in Scheduling with Release Dates to Minimize Maximum Delivery Time. MATHEMATICA APPLICATA: 2006 ,19(2) ,374-380</p>
-<p>[25].	Shuguang Li and Guojun Li and Shaoqiang Zhang. Minimizing makespan with release times on identical parallel batching machines. Discrete Applied Mathematics: 2005 ,148(1) ,127 - 134</p>
-<p>[26].	Zhang, Shao-qiang and Li, Guo-jun and Li, Shu-guang. A Linear Time Algorithm for the Minimum-weight Feedback Vertex Set Problem in Series-parallel Graphs. Acta Mathematicae Applicatae Sinica: 2004 ,20(4) ,579--588</p>
-<p>[27].	Shuguang Li and Guojun Li and Shaoqiang Zhang. Minimizing Maximum Lateness on Identical Parallel Batch Processing Machines. Computing and Combinatorics, 10th Annual International Conference, {COCOON} 2004, Jeju Island, Korea, August 17-20, 2004, Proceedings: 2004 ,3106 ,229--237</p>
-<p>[28].	Zhang, Shaoqiang and Li, Guojun and Sohn, Moo-Young.  Two feedback problems for graphs with bounded tree-width. Applied Mathematics-A Journal of Chinese Universities: 2004(Jun) ,19(2) ,149--154</p>
-<p>[29].	Zhang, Shaoqiang and Li, Guojun.  A PTAS for the scheduling and wavelength assignment problem in WDM networks. Mathematica Applicata(应用数学): 2004 ,17(01) ,67-72</p>
-<p>[30].	Zhang, Shaoqiang and Wang, Xiao and Li, Guojun. A linear time algorithm for minimum-weight feedback vertex set problem in outerplanar graphs. Journal of Mathematical Research & Exposition: 2004 ,24(01) ,610–618</p>
-<p>[31].	张少强,王继强,李曙光. 几类特殊平面图的圈包装问题. 山东大学学报(理学版),JOURNAL OF SHANDONG UNIVERSITY(NATURAL SCIENCE): 2004 ,39(1) ,1-4</p>
-<p>[32].	李国君,张少强,Ousmane Samake,陈光亭.环 形全光WDM网络的波长分配,应用数学学报: 2003 , 26(3)</p>
-<p>[33].	张少强,李国君,李曙光. 全光双向网络中的波长转换. 软件学报: 2002 , 13(10)</p>
+<p> Main published papers in English are listed on <a href="https://orcid.org/0000-0002-4127-0539"> ORCID(0000-0002-4127-0539)</a></p>
 
 </div>
 </div>
