--- a/pub.htm
+++ b/pub.htm
@@ -214,7 +214,7 @@ border: none;
     <h2 align="center" class="STYLE7"><p>Selected Publications</p></h2>
     <div class="page">
 <p> Main published papers in English are listed on <a href="https://orcid.org/0000-0002-4127-0539"> ORCID(0000-0002-4127-0539)</a></p>
-
+<p> Main published papers in Chinese are listed on <a href="https://www.cnki.net/kcms/detail/knetsearch.aspx?sfield=au&skey=%E5%BC%A0%E5%B0%91%E5%BC%BA&code=000042926045"> CNKI</a></p>
 </div>
 </div>
 </div>
