--- a/computing.htm
+++ b/computing.htm
@@ -213,7 +213,7 @@ border: none;
 <hr />
 <p>•DEGman：单细胞RNA测序数据的差异基因分析工具。(2022)</p>
 <p> differentially-expressed genes of scRNA-seq data
-(The related article: <a target="_blank" href="https://">preprint)</a></p>
+(The related article: <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/36009024/">PMID: 36009024)</a></p>
 <p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/DEGman">https://github.com/shaoqiangzhang/DEGman</a> 
 </p>
 <hr />
@@ -279,7 +279,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Mar 30,2022</p>
+			<p>Updated by Sept 18,2022</p>
 		</div>
 
 </div>
