--- a/grad.htm
+++ b/grad.htm
@@ -207,10 +207,10 @@ border: none;
 
 
 
-<p>•	现指导研究生6名：	
+<p>•	现指导研究生10名：	
 <p>&nbsp; 李荔暄；谢林娟（2020级）
 <p>&nbsp; 潘镜伊；雷添媛；秦璐；朱邦瑜（2021级）
-<p>&nbsp; （2022级）
+<p>&nbsp; 高若莹、陈亮、丛涵林、张光亚（2022级）
 <hr />
 <p>•	已毕业研究生（29名）：</p>
 <p>&nbsp;	2007：丁春勇；侯刚</p>
@@ -238,7 +238,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Sept 30,2021</p>
+			<p>Updated by Sept 30,2022</p>
 		</div>
 
 </div>
